--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blog-post-api",
   "version": "1.0.0",
+  
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "RESTful API with Node.js, Express, and PostgreSQL",
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
